manifest/5.ejemplo/service_europe.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: europe
  name: europe
  namespace: world
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: europe
  sessionAffinity: None
  type: ClusterIP
